welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:8: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:11: error: type mismatch;
 found   : Unit
 required: Int
 	ado = ado + 1
            ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
 else if ( d>=13 && d<=19) {
      ^